[package]
name = "tx-coordinator"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
glob = "0.3"
anyhow = "1"
itertools = "0.10"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
tokio-stream = "0.1"