[package]
name = "tx-coordinator"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "tx-coordinator"
path = "src/bin.rs"
doc = false

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
glob = "0.3"
anyhow = "1"
itertools = "0.10"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.52"
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = { version = "0.2", features = ["json", "chrono"] }